gccida/c1/expand_dec
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_dec/src/expmed.c:2356:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)target + 2), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_dec/src/obj/expmed.o] Error 1
